--- a/package.json
+++ b/package.json
@@ -1,89 +1,32 @@
-import * as THREE from 'three'
-import { GLTFLoader } from 'three/examples/jsm/loaders/GLTFLoader.js'
-import EventEmitter from './EventEmitter.js'
-
-export default class Resources extends EventEmitter
 {
-    constructor(sources)
-    {
-        super()
-        this.sources = sources
-        // Setup
-        this.items = {}
-        this.toLoad = this.sources.length
-        this.loaded = 0
-        this.setLoaders()
-        this.startLoading()
-
+    "repository": "#",
+    "license": "UNLICENSED",
+    "scripts": {
+      "build": "webpack --config ./bundler/webpack.prod.js",
+      "dev": "webpack serve --config ./bundler/webpack.dev.js"
+    },
+    "dependencies": {
+      "@babel/core": "^7.13.1",
+      "@babel/preset-env": "^7.13.5",
+      "babel-loader": "^8.2.2",
+      "ccapture.js": "^1.1.0",
+      "clean-webpack-plugin": "^3.0.0",
+      "copy-webpack-plugin": "^7.0.0",
+      "css-loader": "^5.1.0",
+      "lil-gui": "^0.11.0",
+      "file-loader": "^6.2.0",
+      "html-loader": "^2.1.1",
+      "html-webpack-plugin": "^5.2.0",
+      "mini-css-extract-plugin": "^1.3.9",
+      "portfinder-sync": "0.0.2",
+      "raw-loader": "^4.0.2",
+      "spectrogram": "0.0.7",
+      "style-loader": "^2.0.0",
+      "three": "^0.126.0",
+      "webpack": "^5.24.2",
+      "webpack-cli": "^4.5.0",
+      "webpack-dev-server": "^3.11.2",
+      "webpack-merge": "^5.7.3"
     }
-
-    setLoaders()
-    {
-        this.loaders = {}
-        this.loaders.gltfLoader = new GLTFLoader()
-        this.loaders.textureLoader = new THREE.TextureLoader()
-        this.loaders.cubeTextureLoader = new THREE.CubeTextureLoader()
-        this.loaders.fontLoader = new THREE.FontLoader()
-    }
-    startLoading()
-    {
-        // Load each source
-        for(const source of this.sources)
-        {
-            if(source.type === 'gltfModel')
-            {
-                this.loaders.gltfLoader.load(
-                    source.path,
-                    (file) =>
-                    {
-                        this.sourceLoaded(source, file)
-                    }
-                )
-            }
-            else if(source.type === 'texture')
-            {
-                this.loaders.textureLoader.load(
-                    source.path,
-                    (file) =>
-                    {
-                        this.sourceLoaded(source, file)
-                    }
-                )
-            }
-            else if(source.type === 'cubeTexture')
-            {
-                this.loaders.cubeTextureLoader.load(
-                    source.path,
-                    (file) =>
-                    {
-                        this.sourceLoaded(source, file)
-                    }
-                )
-            }
-            else if(source.type === 'font')
-            {
-                this.loaders.fontLoader.load(
-                    source.path,
-                    (file) =>
-                    {
-                        this.sourceLoaded(source, file)
-                    }
-                )
-            }
-        }
-    }
-
-    sourceLoaded(source, file)
-    {
-        this.items[source.name] = file
-
-        this.loaded++
-
-        if(this.loaded === this.toLoad)
-        {
-            let loading = document.getElementById('loading')
-            loading.style.display = 'none'
-            this.trigger('ready')
-        }
-    }
-}
+  }
+  
